feat: updating user
