# pkg/users/models.go
@@ -37,15 +37,6 @@ func (u *UserModel) BeforeCreate(tx *gorm.DB) error {
 	return u.BaseModel.BeforeCreate(tx)
 }
 
-func generatePassword(password string) (string, error) {
-	hash, err := bcrypt.GenerateFromPassword([]byte(password), bcrypt.DefaultCost)
-	return string(hash), err
-}
-
-func verifyPassword(password, hash string) error {
-	return bcrypt.CompareHashAndPassword([]byte(hash), []byte(password))
-}
-
 func (u *UserModel) LoginCheck() (string, error) {
 
 	var user UserModel
